chore: Update dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # The project name, used as the artifact name
-props.project-name=mod-loader-plugin
+props.project-name=mod-loader
 # Group of the project, usually a domain backwards such as com.google
 props.project-group=fr.xpdustry
 # Root package for NullAway
